# various_image_processings

./: .gitmodules  CMakeLists.txt  README.md  config.toml
include/: bilateral_filter.hpp  bilateral_texture_filter.hpp  debug_show.hpp
include/cpp/: adaptive_bilateral_filter.hpp  bilateral_filter.hpp  bilateral_texture_filter.hpp  block_matching_3d.hpp  border_replicated_integral_image.hpp  gradient.hpp  scale_adaptive_bilateral_filter.hpp  slic.hpp  split_and_merge.hpp  wexler_inpainting.hpp
include/cuda/: adaptive_bilateral_filter.hpp  bilateral_filter.hpp  bilateral_texture_filter.hpp  device_image.hpp  gradient.hpp
sample/: CMakeLists.txt
sample/adaptive_bilateral_filter/: CMakeLists.txt  main.cpp
sample/benchmark/: CMakeLists.txt  config.toml  main.cpp
sample/bilateral_filter/: CMakeLists.txt  main.cpp
sample/bilateral_texture_filter/: CMakeLists.txt  main.cpp
sample/block_matching_3d/: CMakeLists.txt  main.cpp
sample/gradient/: CMakeLists.txt  main.cpp
sample/slic/: CMakeLists.txt  main.cpp
sample/split_and_merge/: CMakeLists.txt  main.cpp
sample/wexler_inpainting/: CMakeLists.txt  main.cpp
samples/: mosaic_dog.png:Zone.Identifier
src/: CMakeLists.txt  adaptive_bilateral_filter_impl.cu  adaptive_bilateral_filter_impl.cuh  bench.cpp  bilateral_filter_impl.cu  bilateral_filter_impl.cuh  bilateral_texture_filter.cu  bilateral_texture_filter_impl.cu  bilateral_texture_filter_impl.cuh  device_image.cu  device_utilities.cuh  gradient_impl.cu  host_utilities.hpp  main.cpp
test/: CMakeLists.txt  adaptive_bilateral_filter.cu  bilateral_filter.cu  bilateral_texture_filter.cpp  bilateral_texture_filter.cu  border_replicated_integral_image.cpp  gradient.cu  random_array.hpp
